--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* .App {
+.App {
   text-align: center;
-} */
+}
 
 .App-logo {
   height: 40vmin;
@@ -49,7 +49,7 @@ img {
 }
 .App {
   min-height: 100vh;
-  width: 85vw;
+  /* width: 85vw; */
   max-width: 1900px;
   margin: 0rem auto;
   /* max-width: 600px; */
@@ -104,6 +104,9 @@ nav {
   font-size: 1.5rem;
   cursor: pointer;
 }
+.home-container {
+  background-position: center;
+}
 .home-banner-container {
   position: relative;
   display: flex;
@@ -118,7 +121,7 @@ nav {
   position: relative;
   display: flex;
   justify-content: center;
-  padding-top: 15rem;
+  padding-top: 14rem;
 }
 .home-bannerImage-container {
   position: absolute;
@@ -277,6 +280,18 @@ nav {
   font-size: 1.5rem;
   margin-right: 1.25rem;
   color: #585858;
+}
+.footer-line {
+  display: block;
+    height: 1px;
+    border: 1;
+    border-top: 1px solid #CDD1D4;
+    margin: 1em 0;
+    padding: 0;
+    display: flex;
+    flex: auto;
+    /* Width: 1110px; */
+    /* Height: 1px */
 }
 /* .footer-section-one {
   border: 2px solid blue;
@@ -493,4 +508,7 @@ nav {
     display: none;
   }
 }
+
+/* added */
+
 
